[metadata]
name = refpydst
version = 0.0.1
author = Brendan King
author_email = bking2@ucsc.edu
url = https://github.com/jlab-nlp/refpydst
description = RefPyDST: a retrieval-augmented in-context learning approach to Dialogue State Tracking
long_description = file: README.md
long_description_content_type = text/markdown
keywords = DST, dialogue, MultiWOZ
license = MIT
classifiers =
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
install_requires=
    sqlparse~=0.4.2
    sentence-transformers
    openai~=0.23.0
    # added by kingb12, for analysis of results
    sqlvalidator
    matplotlib~=3.5.3
    seaborn~=0.11.2
    pandas~=1.4.3
    dill
    dictdiffer~=0.9.0
    pyzmq
    ipython
    statsmodels
    jupyter
    dacite~=1.6.0
    numpy~=1.23.1
    wandb~=0.13.2
    tqdm~=4.64.0
    torch~=1.12.0
    scipy~=1.9.0
    transformers~=4.21.2
    autopep8
    fuzzywuzzy
    num2words
[options.package_data]
# If any package or subpackage contains *.txt or *.sql files, include them:
* = *.txt, *.sql, *.pair, *.json
[options.packages.find]
where=src